samples/_failures_safe/1761288020_b6908c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_075053c9.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_075053c9.c:174:26: error: expected ‘;’ at end of input
  174 |         for (int i = 0; i
      |                          ^
      |                          ;
./samples/SAFE/__tmp_075053c9.c:174:9: error: expected declaration or statement at end of input
  174 |         for (int i = 0; i
      |         ^~~
./samples/SAFE/__tmp_075053c9.c:174:9: error: expected declaration or statement at end of input
